lab1/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | ε

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB

   18 FunDec: ID LP VarList RP
   19       | ID LP RP

   20 VarList: ParamDec COMMA VarList
   21        | ParamDec

   22 ParamDec: Specifier VarDec

   23 CompSt: LC DefList StmtList RC
   24       | error RC

   25 StmtList: Stmt StmtList
   26         | ε

   27 Stmt: Exp SEMI
   28     | CompSt
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt
   33     | error SEMI

   34 DefList: Def DefList
   35        | ε

   36 Def: Specifier DecList SEMI

   37 DecList: Dec
   38        | Dec COMMA DecList

   39 Dec: VarDec
   40    | VarDec ASSIGNOP Exp

   41 Exp: Exp ASSIGNOP Exp
   42    | Exp AND Exp
   43    | Exp OR Exp
   44    | Exp RELOP Exp
   45    | Exp PLUS Exp
   46    | Exp MINUS Exp
   47    | Exp STAR Exp
   48    | Exp DIV Exp
   49    | LP Exp RP
   50    | MINUS Exp
   51    | NOT Exp
   52    | ID LP Args RP
   53    | ID LP RP
   54    | Exp LB Exp RB
   55    | Exp DOT ID
   56    | ID
   57    | INT
   58    | FLOAT
   59    | error RP

   60 Args: Exp COMMA Args
   61     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 24 33 59
    INT <node> (258) 17 57
    FLOAT <node> (259) 58
    ID <node> (260) 13 15 16 18 19 52 53 55 56
    SEMI <node> (261) 4 5 27 29 33 36
    COMMA <node> (262) 8 20 38 60
    ASSIGNOP <node> (263) 40 41
    RELOP <node> (264) 44
    PLUS <node> (265) 45
    MINUS <node> (266) 46 50
    STAR <node> (267) 47
    DIV <node> (268) 48
    AND <node> (269) 42
    OR <node> (270) 43
    DOT <node> (271) 55
    NOT <node> (272) 51
    LP <node> (273) 18 19 30 31 32 49 52 53
    RP <node> (274) 18 19 30 31 32 49 52 53 59
    LB <node> (275) 17 54
    RB <node> (276) 17 54
    LC <node> (277) 11 23
    RC <node> (278) 11 23 24
    STRUCT <node> (279) 11 12
    RETURN <node> (280) 29
    IF <node> (281) 30 31
    ELSE <node> (282) 31
    WHILE <node> (283) 32
    TYPE <node> (284) 9
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <node> (32)
        on left: 1
        on right: 0
    ExtDefList <node> (33)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (34)
        on left: 4 5 6
        on right: 2
    ExtDecList <node> (35)
        on left: 7 8
        on right: 4 8
    Specifier <node> (36)
        on left: 9 10
        on right: 4 5 6 22 36
    StructSpecifier <node> (37)
        on left: 11 12
        on right: 10
    OptTag <node> (38)
        on left: 13 14
        on right: 11
    Tag <node> (39)
        on left: 15
        on right: 12
    VarDec <node> (40)
        on left: 16 17
        on right: 7 8 17 22 39 40
    FunDec <node> (41)
        on left: 18 19
        on right: 6
    VarList <node> (42)
        on left: 20 21
        on right: 18 20
    ParamDec <node> (43)
        on left: 22
        on right: 20 21
    CompSt <node> (44)
        on left: 23 24
        on right: 6 28
    StmtList <node> (45)
        on left: 25 26
        on right: 23 25
    Stmt <node> (46)
        on left: 27 28 29 30 31 32 33
        on right: 25 30 31 32
    DefList <node> (47)
        on left: 34 35
        on right: 11 23 34
    Def <node> (48)
        on left: 36
        on right: 34
    DecList <node> (49)
        on left: 37 38
        on right: 36 38
    Dec <node> (50)
        on left: 39 40
        on right: 37 38
    Exp <node> (51)
        on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
        on right: 27 29 30 31 32 40 41 42 43 44 45 46 47 48 49 50 51 54 55 60 61
    Args <node> (52)
        on left: 60 61
        on right: 52 60


State 0

    0 $accept: • Program $end

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   11 StructSpecifier: STRUCT • OptTag LC DefList RC
   12                | STRUCT • Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 2

    9 Specifier: TYPE •

    $default  reduce using rule 9 (Specifier)


State 3

    0 $accept: Program • $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef • ExtDefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   10 Specifier: StructSpecifier •

    $default  reduce using rule 10 (Specifier)


State 8

   13 OptTag: ID •
   15 Tag: ID •

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 18


State 10

   12 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 12 (StructSpecifier)


State 11

    0 $accept: Program $end •

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 13

   16 VarDec: ID •
   18 FunDec: ID • LP VarList RP
   19       | ID • LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 16 (VarDec)


State 14

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 20


State 16

    7 ExtDecList: VarDec •
    8           | VarDec • COMMA ExtDecList
   17 VarDec: VarDec • LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 7 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec • CompSt

    error  shift, and go to state 23
    LC     shift, and go to state 24

    CompSt  go to state 25


State 18

   11 StructSpecifier: STRUCT OptTag LC • DefList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 35 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 27
    Def              go to state 28


State 19

   18 FunDec: ID LP • VarList RP
   19       | ID LP • RP

    RP      shift, and go to state 29
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 31
    ParamDec         go to state 32


State 20

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 21

    8 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 33

    ExtDecList  go to state 34
    VarDec      go to state 16


State 22

   17 VarDec: VarDec LB • INT RB

    INT  shift, and go to state 35


State 23

   24 CompSt: error • RC

    RC  shift, and go to state 36


State 24

   23 CompSt: LC • DefList StmtList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 35 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 37
    Def              go to state 28


State 25

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 26

   36 Def: Specifier • DecList SEMI

    ID  shift, and go to state 33

    VarDec   go to state 38
    DecList  go to state 39
    Dec      go to state 40


State 27

   11 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 41


State 28

   34 DefList: Def • DefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 35 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 42
    Def              go to state 28


State 29

   19 FunDec: ID LP RP •

    $default  reduce using rule 19 (FunDec)


State 30

   22 ParamDec: Specifier • VarDec

    ID  shift, and go to state 33

    VarDec  go to state 43


State 31

   18 FunDec: ID LP VarList • RP

    RP  shift, and go to state 44


State 32

   20 VarList: ParamDec • COMMA VarList
   21        | ParamDec •

    COMMA  shift, and go to state 45

    $default  reduce using rule 21 (VarList)


State 33

   16 VarDec: ID •

    $default  reduce using rule 16 (VarDec)


State 34

    8 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 8 (ExtDecList)


State 35

   17 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 46


State 36

   24 CompSt: error RC •

    $default  reduce using rule 24 (CompSt)


State 37

   23 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    ID      shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 24
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56

    RC  reduce using rule 26 (StmtList)

    CompSt    go to state 57
    StmtList  go to state 58
    Stmt      go to state 59
    Exp       go to state 60


State 38

   17 VarDec: VarDec • LB INT RB
   39 Dec: VarDec •
   40    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 61
    LB        shift, and go to state 22

    $default  reduce using rule 39 (Dec)


State 39

   36 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 62


State 40

   37 DecList: Dec •
   38        | Dec • COMMA DecList

    COMMA  shift, and go to state 63

    $default  reduce using rule 37 (DecList)


State 41

   11 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 11 (StructSpecifier)


State 42

   34 DefList: Def DefList •

    $default  reduce using rule 34 (DefList)


State 43

   17 VarDec: VarDec • LB INT RB
   22 ParamDec: Specifier VarDec •

    LB  shift, and go to state 22

    $default  reduce using rule 22 (ParamDec)


State 44

   18 FunDec: ID LP VarList RP •

    $default  reduce using rule 18 (FunDec)


State 45

   20 VarList: ParamDec COMMA • VarList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 64
    ParamDec         go to state 32


State 46

   17 VarDec: VarDec LB INT RB •

    $default  reduce using rule 17 (VarDec)


State 47

   24 CompSt: error • RC
   33 Stmt: error • SEMI
   59 Exp: error • RP

    SEMI  shift, and go to state 65
    RP    shift, and go to state 66
    RC    shift, and go to state 36


State 48

   57 Exp: INT •

    $default  reduce using rule 57 (Exp)


State 49

   58 Exp: FLOAT •

    $default  reduce using rule 58 (Exp)


State 50

   52 Exp: ID • LP Args RP
   53    | ID • LP RP
   56    | ID •

    LP  shift, and go to state 67

    $default  reduce using rule 56 (Exp)


State 51

   50 Exp: MINUS • Exp

    error  shift, and go to state 68
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 69


State 52

   51 Exp: NOT • Exp

    error  shift, and go to state 68
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 70


State 53

   49 Exp: LP • Exp RP

    error  shift, and go to state 68
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 71


State 54

   29 Stmt: RETURN • Exp SEMI

    error  shift, and go to state 68
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 72


State 55

   30 Stmt: IF • LP Exp RP Stmt
   31     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 73


State 56

   32 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 74


State 57

   28 Stmt: CompSt •

    $default  reduce using rule 28 (Stmt)


State 58

   23 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 75


State 59

   25 StmtList: Stmt • StmtList

    error   shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    ID      shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 24
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56

    RC  reduce using rule 26 (StmtList)

    CompSt    go to state 57
    StmtList  go to state 76
    Stmt      go to state 59
    Exp       go to state 60


State 60

   27 Stmt: Exp • SEMI
   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    SEMI      shift, and go to state 77
    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    LB        shift, and go to state 87


State 61

   40 Dec: VarDec ASSIGNOP • Exp

    error  shift, and go to state 68
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 88


State 62

   36 Def: Specifier DecList SEMI •

    $default  reduce using rule 36 (Def)


State 63

   38 DecList: Dec COMMA • DecList

    ID  shift, and go to state 33

    VarDec   go to state 38
    DecList  go to state 89
    Dec      go to state 40


State 64

   20 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 20 (VarList)


State 65

   33 Stmt: error SEMI •

    $default  reduce using rule 33 (Stmt)


State 66

   59 Exp: error RP •

    $default  reduce using rule 59 (Exp)


State 67

   52 Exp: ID LP • Args RP
   53    | ID LP • RP

    error  shift, and go to state 68
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    RP     shift, and go to state 90

    Exp   go to state 91
    Args  go to state 92


State 68

   59 Exp: error • RP

    RP  shift, and go to state 66


State 69

   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   50    | MINUS Exp •
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    STAR  shift, and go to state 82
    DIV   shift, and go to state 83
    DOT   shift, and go to state 86
    LB    shift, and go to state 87

    $default  reduce using rule 50 (Exp)


State 70

   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   51    | NOT Exp •
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    DOT  shift, and go to state 86
    LB   shift, and go to state 87

    $default  reduce using rule 51 (Exp)


State 71

   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   49    | LP Exp • RP
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    RP        shift, and go to state 93
    LB        shift, and go to state 87


State 72

   29 Stmt: RETURN Exp • SEMI
   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    SEMI      shift, and go to state 94
    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    LB        shift, and go to state 87


State 73

   30 Stmt: IF LP • Exp RP Stmt
   31     | IF LP • Exp RP Stmt ELSE Stmt

    error  shift, and go to state 68
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 95


State 74

   32 Stmt: WHILE LP • Exp RP Stmt

    error  shift, and go to state 68
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 96


State 75

   23 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 23 (CompSt)


State 76

   25 StmtList: Stmt StmtList •

    $default  reduce using rule 25 (StmtList)


State 77

   27 Stmt: Exp SEMI •

    $default  reduce using rule 27 (Stmt)


State 78

   41 Exp: Exp ASSIGNOP • Exp

    error  shift, and go to state 68
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 97


State 79

   44 Exp: Exp RELOP • Exp

    error  shift, and go to state 68
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 98


State 80

   45 Exp: Exp PLUS • Exp

    error  shift, and go to state 68
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 99


State 81

   46 Exp: Exp MINUS • Exp

    error  shift, and go to state 68
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 100


State 82

   47 Exp: Exp STAR • Exp

    error  shift, and go to state 68
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 101


State 83

   48 Exp: Exp DIV • Exp

    error  shift, and go to state 68
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 102


State 84

   42 Exp: Exp AND • Exp

    error  shift, and go to state 68
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 103


State 85

   43 Exp: Exp OR • Exp

    error  shift, and go to state 68
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 104


State 86

   55 Exp: Exp DOT • ID

    ID  shift, and go to state 105


State 87

   54 Exp: Exp LB • Exp RB

    error  shift, and go to state 68
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 106


State 88

   40 Dec: VarDec ASSIGNOP Exp •
   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    LB        shift, and go to state 87

    $default  reduce using rule 40 (Dec)


State 89

   38 DecList: Dec COMMA DecList •

    $default  reduce using rule 38 (DecList)


State 90

   53 Exp: ID LP RP •

    $default  reduce using rule 53 (Exp)


State 91

   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID
   60 Args: Exp • COMMA Args
   61     | Exp •

    COMMA     shift, and go to state 107
    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    LB        shift, and go to state 87

    $default  reduce using rule 61 (Args)


State 92

   52 Exp: ID LP Args • RP

    RP  shift, and go to state 108


State 93

   49 Exp: LP Exp RP •

    $default  reduce using rule 49 (Exp)


State 94

   29 Stmt: RETURN Exp SEMI •

    $default  reduce using rule 29 (Stmt)


State 95

   30 Stmt: IF LP Exp • RP Stmt
   31     | IF LP Exp • RP Stmt ELSE Stmt
   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    RP        shift, and go to state 109
    LB        shift, and go to state 87


State 96

   32 Stmt: WHILE LP Exp • RP Stmt
   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    RP        shift, and go to state 110
    LB        shift, and go to state 87


State 97

   41 Exp: Exp • ASSIGNOP Exp
   41    | Exp ASSIGNOP Exp •
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    LB        shift, and go to state 87

    $default  reduce using rule 41 (Exp)


State 98

   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   44    | Exp RELOP Exp •
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    PLUS   shift, and go to state 80
    MINUS  shift, and go to state 81
    STAR   shift, and go to state 82
    DIV    shift, and go to state 83
    DOT    shift, and go to state 86
    LB     shift, and go to state 87

    RELOP  error (nonassociative)

    $default  reduce using rule 44 (Exp)


State 99

   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   45    | Exp PLUS Exp •
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    STAR  shift, and go to state 82
    DIV   shift, and go to state 83
    DOT   shift, and go to state 86
    LB    shift, and go to state 87

    $default  reduce using rule 45 (Exp)


State 100

   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   46    | Exp MINUS Exp •
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    STAR  shift, and go to state 82
    DIV   shift, and go to state 83
    DOT   shift, and go to state 86
    LB    shift, and go to state 87

    $default  reduce using rule 46 (Exp)


State 101

   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   47    | Exp STAR Exp •
   48    | Exp • DIV Exp
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    DOT  shift, and go to state 86
    LB   shift, and go to state 87

    $default  reduce using rule 47 (Exp)


State 102

   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   48    | Exp DIV Exp •
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    DOT  shift, and go to state 86
    LB   shift, and go to state 87

    $default  reduce using rule 48 (Exp)


State 103

   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   42    | Exp AND Exp •
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    RELOP  shift, and go to state 79
    PLUS   shift, and go to state 80
    MINUS  shift, and go to state 81
    STAR   shift, and go to state 82
    DIV    shift, and go to state 83
    DOT    shift, and go to state 86
    LB     shift, and go to state 87

    $default  reduce using rule 42 (Exp)


State 104

   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   43    | Exp OR Exp •
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    RELOP  shift, and go to state 79
    PLUS   shift, and go to state 80
    MINUS  shift, and go to state 81
    STAR   shift, and go to state 82
    DIV    shift, and go to state 83
    AND    shift, and go to state 84
    DOT    shift, and go to state 86
    LB     shift, and go to state 87

    $default  reduce using rule 43 (Exp)


State 105

   55 Exp: Exp DOT ID •

    $default  reduce using rule 55 (Exp)


State 106

   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   54    | Exp • LB Exp RB
   54    | Exp LB Exp • RB
   55    | Exp • DOT ID

    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    LB        shift, and go to state 87
    RB        shift, and go to state 111


State 107

   60 Args: Exp COMMA • Args
